--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -14,7 +14,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: '0'
 
       - name: Set up environment
@@ -30,7 +29,9 @@ jobs:
         # NOTE: The pull request' base branch needs to be fetched so towncrier
         # is able to compare the current branch with the base branch.
         run: |
-          git fetch --no-tags origin +refs/heads/${BASE_BRANCH}:refs/remotes/origin/${BASE_BRANCH}
-          towncrier check --compare-with origin/${BASE_BRANCH}
+          if ! towncrier check --compare-with origin/${BASE_BRANCH}; then
+            echo "::error::Please see https://github.com/DisnakeDev/disnake/blob/master/changelog/README.rst for details on how to create a changelog entry." >&2
+            exit 1
+          fi
         env:
           BASE_BRANCH: ${{ github.base_ref }}
