--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,5 +13,4 @@ python:
   install:
     - method: pip
       path: .
-      extra_requirements:
-        - docs
+    - requirements: requirements/requirements_docs.txt
