--- a/requirements/requirements_docs.txt
+++ b/requirements/requirements_docs.txt
@@ -3,4 +3,4 @@ sphinxcontrib-trio~=1.1.2
 sphinx-hoverxref==1.1.3
 sphinx-autobuild~=2021.3
 sphinxcontrib-towncrier==0.2.1a0
-towncrier==21.9.0
+towncrier @ https://github.com/shiftinv/towncrier/archive/fb77c63815bf0e4140a9e3a45c0e5f5ada9fe1ed.tar.gz
