--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -13,10 +13,6 @@ inputs:
       pyproject.toml
       pdm.lock
       setup.py
-  pdm-command:
-    description: |
-      The command to run to install dependencies.
-    required: false
 outputs:
   python-version:
     description: The python version that was installed.
@@ -44,17 +40,11 @@ runs:
       shell: bash
       run: python -m pip install -U pip wheel setuptools
 
-    - name: Install dependencies
-      if: inputs.pdm-command
-      env:
-        PDM_COMMAND: ${{ inputs.pdm-command }}
+    - name: Install nox
       shell: bash
-      run: |
-        pip install nox
-        $PDM_COMMAND
+      run: pip install nox
 
     - name: Set python version
       id: python-version
       shell: bash
-      run: |
-        echo "python-version=$(python -c 'import sys; print(".".join(map(str,sys.version_info[:2])))')" >> $GITHUB_OUTPUT
+      run: echo "python-version=$(python -c 'import sys; print(".".join(map(str,sys.version_info[:2])))')" >> $GITHUB_OUTPUT
