--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -4,11 +4,6 @@ name: Lint & Test
 
 on:
   push:
-    branches:
-      - 'master'
-      - 'v[0-9]+.[0-9]+.x'  # matches to backport branches, e.g. 3.6
-      - 'run-ci/*'
-    tags:
   pull_request:
 
 permissions:
@@ -33,7 +28,10 @@ jobs:
       uses: ./.github/actions/setup-env
       with:
         python-version: 3.8
-        pdm-command: "pdm install -dG tools -dG lint"
+
+    # TODO: remove when moving to ruff
+    - name: Install dependencies
+      run: pdm install -dG lint
 
     - name: Run pre-commit
       id: pre-commit
@@ -67,7 +65,6 @@ jobs:
       uses: ./.github/actions/setup-env
       with:
         python-version: 3.8
-        pdm-command: "pdm install -G docs"
 
     - name: Run sphinx-build
       run: nox -s docs -- --keep-going -W -w $GITHUB_STEP_SUMMARY
@@ -134,7 +131,6 @@ jobs:
       uses: ./.github/actions/setup-env
       with:
         python-version: 3.8
-        pdm-command: "pdm install -dG tools -dG codemod"
 
     - name: Run slotscheck
       if: (success() || failure()) && steps.setup.outcome == 'success'
@@ -185,7 +181,9 @@ jobs:
       uses: ./.github/actions/setup-env
       with:
         python-version: ${{ matrix.python-version }}
-        pdm-command: 'pdm install -dG test -dG typing'
+
+    - name: Install dependencies
+      run: pdm install -dG test  # needed for coverage
 
     - name: Test package install
       run: |
